# ccxt-download

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: download.py  read.py
scripts/: publish
src/ccxt_download/: __init__.py  constants.py  public.py  utilities.py
